tests/invalid/type/arity_textfile_seek_too_few.pts
import Io;

function main() : void {
    var f = Io.openText("io_text.txt", "r");
    f.seek();
}
